apps/production/blog/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blog
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: registry-internal.local.hejsan.xyz/josmase/blog:2024.01.29.202359-51464e4
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      imagePullSecrets:
        - name: container-registry-internal-secret
