apps/production/blog/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: blog
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
    namespace: traefik
